# panst3r

./: .gitignore  LICENSE  NOTICE  README.md  gradio_panst3r.py  pyproject.toml  train.py
configs/: base.yaml  base_v2.yaml  distributed.yaml
src/panst3r/: __init__.py  logging.py  panst3r.py  tqdm.py  utils.py
src/panst3r/criterion/: __init__.py  losses.py  matcher.py  panoptic.py
src/panst3r/datasets/: __init__.py  base.py  cropping.py  scannetpp.py  utils.py
src/panst3r/engine/: __init__.py  dino.py  io.py  must3r.py  postprocess.py  retrieval.py  train.py
src/panst3r/model/: __init__.py  blocks.py  dino.py  input_mixer.py  mask_transformer.py  panoptic_decoder.py  text_encoder.py
src/panst3r/model/upscalers/: __init__.py  loftup.py  pixel_shuffle.py
tools/: demo_panst3r.py  preprocess_scannetpp.py
